--- a/package.json
+++ b/package.json
@@ -14,23 +14,19 @@
   },
   "author": "Labs 14 Roamly.app",
   "license": "MIT",
-  "bugs": {
-    "url": ""
-  },
-  "homepage": "",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
-    "faker": "^4.1.0",
     "helmet": "^3.18.0",
     "knex": "^0.16.5",
     "knex-cleaner": "^1.1.4",
     "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^2.0.0",
     "pg": "^7.10.0"
   },
   "devDependencies": {
-    "cross-env": "^5.2.0",
     "jest": "^24.8.0",
     "nodemon": "^1.19.0",
     "supertest": "^4.0.2"
